--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,14 @@
   "description": "The backend for the ticketing project",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Klevis Dervishi, Kledis Zaimi, Anja Balla",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "nodemon": "^3.1.9"
+  }
 }
