Finished with all the code for the first sprint

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,4 @@
 VITE_SALT = 10
 VITE_URL_SIGNUP = 'http://localhost:5000/signup'
+VITE_URL_SIGNIN = 'http://localhost:5000/signin'
+VITE_VERIFY = 'http://localhost:5000/verify'
