Creating the list of the tasks in the main page

--- a/frontend/.env
+++ b/frontend/.env
@@ -3,3 +3,4 @@ VITE_URL_SIGNUP = 'http://localhost:5000/signup'
 VITE_URL_SIGNIN = 'http://localhost:5000/signin'
 VITE_VERIFY = 'http://localhost:5000/verify'
 VITE_ADDTICKET = 'http://localhost:5000/addTicket'
+VITE_GETTICKETS = 'http://localhost:5000/getTickets'
