--- a/frontend/.env
+++ b/frontend/.env
@@ -4,3 +4,5 @@ VITE_URL_SIGNIN = 'http://localhost:5000/signin'
 VITE_VERIFY = 'http://localhost:5000/verify'
 VITE_ADDTICKET = 'http://localhost:5000/addTicket'
 VITE_GETTICKETS = 'http://localhost:5000/getTickets'
+VITE_UPDATETICKETS = 'http://localhost:5000/updateTicket'
+VITE_UPDATESTATUS = 'http://localhost:5000/ticketAction'
