Finishing up with the summary report and the import function

--- a/frontend/.env
+++ b/frontend/.env
@@ -6,3 +6,5 @@ VITE_ADDTICKET = 'http://localhost:5000/addTicket'
 VITE_GETTICKETS = 'http://localhost:5000/getTickets'
 VITE_UPDATETICKETS = 'http://localhost:5000/updateTicket'
 VITE_UPDATESTATUS = 'http://localhost:5000/ticketAction'
+VITE_GETUNSOLVEDTICKETS = 'http://localhost:5000/getUnsolvedTIckets'
+VITE_IMPORT = 'http://localhost:5000/import'
